More parse tree writer.

--- a/TODO.txt
+++ b/TODO.txt
@@ -21,6 +21,9 @@ TODO
   - statements
   - expressions
 - transformer
+  - statements
+  - expressions
+  - classes
 - language features
   - statements
     - resource acquisition
