More parsing tests.

--- a/TODO.txt
+++ b/TODO.txt
@@ -3,6 +3,10 @@ Next Up
 - testing
 - class declarations
 - type system
+- hygiene
+  - name table
+  - project
+  - semantic analyzer
 
 TODO
 ----
